<resources>
    <string name="app_name">ProyectoDam</string>
    <string name="nav_open">Abre Navegacion</string>
    <string name="nav_close">Cierra Navegacion</string>
    <string name="registrarse">Registrarse/Olvidó su contraseña</string>
    <string name="correo">Introduce tu correo electrónico</string>
    <string name="pass">Contraseña</string>
    <string name="login">Login</string>
    <string name="loginBio">Login Biométrico</string>
    <string name="mailError">Introduzca un correo electrónico válido</string>
    <string name="opciones">Por favor, escoja una de las siguientes opciones:</string>
    <string name="recPass">Recuperar contraseña</string>
    <string name="registro">Registrarse</string>
    <string name="volver">Volver</string>
    <string name="nombre">Nombre completo\n/Razón Fiscal</string>
    <string name="dni">DNI/CIF:</string>
    <string name="direccion">Dirección:</string>
    <string name="telefono">Teléfono:</string>
    <string name="email">Email:</string>
    <string name="personales">DATOS PERSONALES:</string>
    <string name="vehiculos">DATOS DEL VEHICULO PRINCIPAL:</string>
    <string name="postal">Cod.Postal:</string>
    <string name="provincia">Provincia:</string>
    <string name="localidad">Localidad:</string>
    <string name="lbMarca">Marca:</string>
    <string name="lbSerie">Serie:</string>
    <string name="spTipo">Tipo:</string>
    <string name="spGeneracion">Generacion:</string>
    <string name="spSerie">Tipo:</string>
    <string name="spModelo">Modelo:</string>
    <string name="spSistema">Sistema:</string>
    <string name="spMotor">Motor:</string>
    <string name="spAnnio">Año:</string>
    <string name="spCombustible">Combustible:</string>
    <string name="spCambio">Caja de\ncambios:</string>
    <string name="spCentralita">Centralita:</string>
    <string name="lbAnnio">Introduce año:</string>
    <string name="lbSintomaAveria">Síntomas Avería:</string>
    <string name="lbAgregarFoto">Agregar fotos:</string>
    <string name="sinResultados">No se encontraron resultados para su búsqueda, inténtelo de nuevo con otros parametros</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="bqMarca">Buscar por marca</string>
    <string name="bqModelo">Buscar por modelo</string>
    <string name="bqSistema">Buscar por sistema</string>
    <string name="si">SI</string>
    <string name="no">NO</string>
    <string name="matricula">Matrícula:</string>
    <string name="kms">Kilómetros:</string>
    <string name="password">Contraseña:\n1.Primera letra en mayúscula.\n2.Resto en mínusculas\n3. Guión bajo.\n4. Seguido de números."</string>
    <string name="personFisica">Persona física:</string>
    <string name="empresa">Empresa:</string>
    <string name="todo">TODO</string>
    <string name="recPassword1">RECUPERAR CONTRASEÑA:</string>
    <string name="recPassword2">Sí ha olvidado su contraseña y desea recuperla, introduzca su correo electrónico válido para restaurarla.\n
    Recibira un email con las instrucciones de restablecimiento de contraseña en el correo electrónico facilitado, siempre y cuando éste se encuentre registrado correctamente en nuestra base de datos.</string>
    <string name="btRecPass">RESTABLECER CONTRASEÑA</string>
    <string name="Bienvenida">Bienvenid@: </string>
    <string name="regisVehiculo">REGISTRAR VEHICULO</string>
    <string name="miPerfil">Mi Perfil</string>
    <string name="citas">Gestión de citas</string>
    <string name="ordenes">Ordenes reparación</string>
    <string name="documentos">Documentos</string>
    <string name="empleados">Gestión empleados</string>
    <string name="listados">Informes/Listados</string>
    <string name="promocionar">Promociones</string>
    <string name="comunicaciones">Notificación/Email</string>
    <string name="derechos">2024 MegaCar.Todos los derechos reservados.\n Queda prohibido su uso o distribución sin consentimiento del autor.</string>
    <string name="default_notification_channel_id">ID_CHANNEL</string>
    <string name="empleado">Empleado</string>
    <string name="menuPpal">Menu Principal</string>
    <string name="menuCitas">Gestión de citas</string>
    <string name="menuOrdenes">Gestionar ordenes</string>
    <string name="menuDocumentos">Documentos</string>
    <string name="menuEmpleados">Gestión empleados</string>
    <string name="menuListados">Informes/Listados</string>
    <string name="menuPromociones">Promociones</string>
    <string name="menuComunicaciones">Comunicaciones</string>
    <string name="botonEditar">EDITAR</string>
    <string name="botonDatosPerfil">GRABAR</string>
    <string name="botonVolver">VOLVER</string>
    <string name="introducePass">Introduzca contraseña</string>
    <string name="repitePass">Confirme contraseña</string>
</resources>
