<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@color/colorTransparente"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded"
            android:orientation="vertical"
            tools:ignore="TextSizeCheck">

            <TextView
                android:id="@+id/dialogTexto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="20dp"
                android:gravity="center_horizontal"
                android:text="@string/opciones"
                android:textColor="@color/azul"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/azul"
                    android:text="@string/registro"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@color/azul"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/recPass"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/btVolver"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:clickable="true"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/volver"
                    android:textColor="#D80808"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>