<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivHome"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:adjustViewBounds="true"
        android:src="@drawable/logotransparente"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/shapeRound" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="25dp"
        android:hint="@string/correo"
        app:errorEnabled="true"
        app:errorContentDescription="Debe de introducir un correo válido"
        app:errorTextColor="#BF0B0B"
        app:startIconDrawable="@drawable/email"
        app:startIconTint="#0D149F"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toBottomOf="@+id/ivHome"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etMail2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textAutoComplete"
            android:textStyle="bold"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        android:layout_marginTop="5dp"
        app:passwordToggleDrawable="@drawable/icon_selector"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#0D149F"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:autoSizeTextType="uniform"
            android:autofillHints="password"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvRegistrarse"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/registrarse"
        android:textColor="#0D149F"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tiLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:clickable="true"
        android:layout_marginTop="20dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/tvRegistrarse"
        app:layout_constraintRight_toRightOf="@+id/tvRegistrarse"
        app:layout_constraintTop_toBottomOf="@+id/tvRegistrarse"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:textStyle="bold"
        android:textColor="#0D149F"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btBiometrico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/btLogin"
        app:layout_constraintRight_toRightOf="@+id/btLogin"
        app:layout_constraintTop_toBottomOf="@+id/btLogin"
        android:visibility="invisible"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:text="@string/loginBio"
        android:textColor="#0D149F"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        />

</androidx.constraintlayout.widget.ConstraintLayout>